Resolves: tdf#127682 out_of_range thrown on print empty calc doc

when odd/even pages requested and print is cancelled

the abort procedure will ask for page 0 to be rendered on cancel,
which doesn't exist since the odd/even support.

Let the print of an empty page to ahead in the abort scenario

Change-Id: Id8dfde57fca891ba3eb220cf6e495585abf4c918
Reviewed-on: https://gerrit.libreoffice.org/79413
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>